syntax = "proto3";

package user;

service UserService {
    rpc CreateUser (UserRequest) returns (UserResponse);
    rpc GetUser (UserID) returns (UserResponse);
}

message UserRequest {
    string name = 1;
    st
}